--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.associations": {
     "*.py": "python",
-    "fstream": "cpp"
+    "fstream": "cpp",
+    "iostream": "cpp",
+    "ostream": "cpp"
   }
 }
