Feat: Add more functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,31 @@
     "*.py": "python",
     "fstream": "cpp",
     "iostream": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "array": "cpp",
+    "*.tcc": "cpp",
+    "chrono": "cpp",
+    "condition_variable": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "vector": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory_resource": "cpp",
+    "optional": "cpp",
+    "istream": "cpp",
+    "numeric": "cpp",
+    "sstream": "cpp",
+    "stop_token": "cpp",
+    "streambuf": "cpp",
+    "thread": "cpp",
+    "tuple": "cpp",
+    "utility": "cpp",
+    "variant": "cpp",
+    "*.inc": "cpp",
+    "iosfwd": "cpp"
   }
 }
